fix weird clipping on certian display points
on smaller displays i had originally cut it down for that but since a lot more people prefer #2 from the discussion feeler i put out i had to fix this one up somewhat as well

--- a/Assets/styles/forum.css
+++ b/Assets/styles/forum.css
@@ -1,5 +1,7 @@
-#display {
-  width: 100%;
+#post {
+  width: 99%;
+  position: relative;
+  left: 1%;
 }
 
 #comments {
